--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <title>Flask教學</title>
   </head>
   <body>
-    <h1>我的第一個Flask網站</h1>
-    <p> Flask是一個使用Python編寫的輕量級Web應用框架。</p>
+    <h1>關於Flask網站</h1>
+    <p>本網站僅用於測試用途。</p>
   </body>
 </html>
